# faktory-rs

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  Makefile  README.md  README.tpl  appveyor.yml  azure-pipelines.yml  clippy.toml  tarpaulin.toml
.github/: codecov.yml  dependabot.yml
.github/workflows/: check.yml  coverage.yml  ent.yaml  minimal.yml  msrv.yml  scheduled.yml  test.yml  tls.yml
docker/: compose.yml  faktory.Dockerfile  nginx.Dockerfile
docker/certs/: README.md  faktory.local.crt  faktory.local.key
docker/nginx/: nginx.conf
examples/: forever.rs  pool.rs  run.rs  run_to_completion.rs
mutants.out/: caught.txt  lock.json  missed.txt  mutants.json  outcomes.json  timeout.txt  unviable.txt
mutants.out.old/: caught.txt  lock.json  missed.txt  mutants.json  outcomes.json  timeout.txt  unviable.txt
src/: .lib.rs.rustfmt  error.rs  lib.rs  tls.rs
src/async/: mod.rs  tls.rs
src/async/consumer/: builder.rs  health.rs  mod.rs  registries.rs  runner.rs
src/async/producer/: mod.rs
src/async/proto/: mod.rs
src/async/proto/single/: cmd.rs  mod.rs  resp.rs
src/asynchrono/proto/: mod.rs
src/asynchrono/proto/single/: cmd.rs  mod.rs  resp.rs
src/client/: mod.rs
src/consumer/: builder.rs  health.rs  mod.rs  registries.rs  runner.rs
src/producer/: mod.rs
src/proto/: .single.rs.rustfmt  mod.rs  utils.rs
src/proto/batch/: cmd.rs  handle.rs  mod.rs  status.rs
src/proto/client/: bb8.rs  conn.rs  ent.rs  mod.rs  mutation.rs  options.rs
src/proto/single/: cmd.rs  ent.rs  id.rs  mod.rs  mutation.rs  resp.rs  utils.rs
src/proto/single/ent/: cmd.rs  mod.rs  progress.rs  utils.rs
src/tls/: mod.rs  native_tls.rs  openssl.rs  rustls.rs
src/tracker/: mod.rs
src/worker/: builder.rs  channel.rs  health.rs  mod.rs  registries.rs  runner.rs  state.rs  stop.rs  system.rs
tests/: consumer.rs  producer.rs  real.rs  sysinfo.rs  tls.rs
tests/mock/: inner.rs  mod.rs
tests/real/: community.rs  enterprise.rs  main.rs  pool.rs  utils.rs
tests/real/async/: community.rs  enterprise.rs  mod.rs
tests/tls/: main.rs  native.rs  native_tls.rs  rustls.rs
