[package]
name = "faktory"
version = "0.12.5"
authors = ["Jon Gjengset <jon@thesquareplanet.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

description = "API bindings for the language-agnostic Faktory work server"
repository = "https://github.com/jonhoo/faktory-rs.git"

keywords = ["faktory", "api-bindings", "work-server", "job-server"]
categories = ["api-bindings", "asynchronous", "network-programming"]

exclude = [".github", "docker", ".gitignore", "Makefile"]

[features]
default = []
native_tls = ["dep:pin-project", "dep:tokio-native-tls"]
rustls = ["dep:pin-project", "dep:tokio-rustls"]
binaries = ["dep:clap", "tokio/macros"]
ent = []

[dependencies]
async-trait = "0.1.77"
clap = { version = "4.4.10", optional = true }
chrono = { version = "0.4", features = [
    "serde",
    "clock",
], default-features = false }
derive_builder = "0.12.0"
fnv = "1.0.5"
hostname = "0.3"
pin-project = { version = "1.1.4", optional = true }
rand = "0.8"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
sha2 = "0.10.0"
thiserror = "1.0.30"
tokio = { version = "1.35.1", features = [
    "io-util",
    "net",
    "rt",
    "rt-multi-thread",
    "time",
] }
tokio-native-tls = { version = "0.3.1", optional = true }
tokio-rustls = { version = "0.25.0", optional = true }
url = "2"

[dev-dependencies]
tokio = { version = "1.35.1", features = ["rt", "macros"] }
tokio-test = "0.4.3"
x509-parser = "0.15.1"

# to make -Zminimal-versions work
[target.'cfg(any())'.dependencies]
chrono = "0.4.32"
native-tls = { version = "0.2.4", optional = true }
num-bigint = "0.4.2"
oid-registry = "0.6.1"
openssl = { version = "0.10.60", optional = true }
rustls = "0.22.1"

[[bin]]
name = "loadtest"
path = "src/bin/loadtest.rs"
required-features = ["binaries"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
